Renaming/Changing URL to URI in almost every file